<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/posterutm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/backdrop"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/jdlats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/jdlats"
                android:gravity="center_vertical"
                android:drawablePadding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:background="#65fcfcfc"
                android:textColor="@color/putih"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="18dp"
                android:layout_gravity="bottom"
                android:layout_marginEnd="18dp"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/isi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="380dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                card_view:cardCornerRadius="9dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg">

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_marginTop="20dp"
                        android:layout_width="110dp"
                        android:src="@drawable/poster"
                        android:layout_height="200dp"
                        android:layout_marginStart="10dp"
                        tools:ignore="ContentDescription" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgfav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_favorite_border_black_24dp"
                            tools:ignore="ContentDescription"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="180dp"/>

                        <TextView
                            android:id="@+id/judul"
                            android:text="@string/judul"
                            android:textSize="26sp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="10dp"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/putih"
                            android:layout_below="@+id/imgfav"
                            android:layout_marginTop="5dp"/>

                        <ImageView
                            android:id="@+id/cal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_date_range_black_24dp"
                            android:layout_below="@+id/judul"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/rilis"
                            android:text="@string/rilis"
                            android:textStyle="bold"
                            android:layout_marginTop="13dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/putih"
                            android:layout_below="@+id/judul"
                            android:layout_toEndOf="@+id/cal"
                            android:layout_marginStart="3dp"/>

                        <TextView
                            android:id="@+id/tglrilis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tglrilis"
                            android:textColor="@color/putih"
                            android:layout_below="@+id/rilis"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="37dp"
                            android:layout_marginEnd="2dp"/>

                        <ImageView
                            android:id="@+id/star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_star_black_24dp"
                            android:layout_below="@+id/cal"
                            android:layout_marginTop="30dp"
                            android:layout_marginStart="10dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/ratingf"
                            android:text="@string/ratingf"
                            android:textStyle="bold"
                            android:layout_marginTop="35dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/putih"
                            android:layout_below="@+id/rilis"
                            android:layout_toEndOf="@+id/star"
                            android:layout_marginStart="3dp"/>

                        <TextView
                            android:id="@+id/rating"
                            android:text="@string/rating"
                            android:layout_marginTop="35dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/putih"
                            android:layout_below="@+id/rilis"
                            android:layout_toEndOf="@id/ratingf"
                            android:layout_marginStart="5dp"/>

                        <ImageView
                            android:id="@+id/language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_language_black_24dp"
                            android:layout_below="@+id/star"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="10dp"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/bhs"
                            android:text="@string/bhs"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/putih"
                            android:layout_below="@+id/ratingf"
                            android:layout_toEndOf="@+id/language"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="9dp"/>

                        <TextView
                            android:id="@+id/bhsasl"
                            android:text="@string/bhsasl"
                            android:layout_marginTop="3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/putih"
                            android:layout_below="@+id/bhs"
                            android:layout_toEndOf="@id/language"
                            android:layout_marginStart="3dp"/>

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/sinopsis"
                    android:layout_width="match_parent"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/putih"
                    android:layout_height="wrap_content"
                    android:text="@string/sinopsis"
                    android:padding="10dp"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp">

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/detail"
                    android:layout_width="match_parent"
                    android:textColor="@color/putih"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/detail"/>



            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>