<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/poster"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/judul"
            android:text="@string/judul"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gold"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/poster"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/deskrip"
            android:textSize="15sp"
            android:text="@string/detail2"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:textColor="@color/gold"
            android:layout_below="@+id/judul"
            android:layout_toEndOf="@+id/poster"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_range_black_24dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/deskrip"
            tools:ignore="ContentDescription"
            android:layout_toEndOf="@+id/poster"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/rilis"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="5dp"
            android:text="@string/tglrilis"
            android:layout_height="wrap_content"
            android:textColor="@color/gold"
            android:layout_below="@+id/deskrip"
            android:layout_toEndOf="@+id/cal"/>

    </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>