<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg">

        <LinearLayout
            android:id="@+id/rel_item_now_play"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription,RtlHardcoded"
                android:src="@drawable/poster"
                android:layout_marginTop="20dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
                android:layout_marginLeft="5dp">

                <TextView
                    android:id="@+id/judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    tools:text="@string/judul"
                    tools:ignore="RtlHardcoded"
                    android:textColor="@color/gold"/>

                <TextView
                    android:id="@+id/deskrip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/judul"
                    android:layout_marginBottom="8dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    tools:text="@string/detail2"
                    tools:ignore="RtlHardcoded"
                    android:textColor="@color/gold"/>

                <ImageView
                    android:id="@+id/cal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/deskrip"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tglrilis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/cal"
                    android:drawablePadding="3dp"
                    android:maxLines="1"
                    tools:text="@string/tglrilis"
                    tools:ignore="RtlHardcoded"
                    android:layout_below="@+id/deskrip"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/gold"
                    android:textSize="12sp"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>